--- a/WinUIHostingChromiumWebView/WinUIHostingChromiumWebView.csproj
+++ b/WinUIHostingChromiumWebView/WinUIHostingChromiumWebView.csproj
@@ -117,6 +117,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -152,6 +153,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.WinUI">
       <Version>3.0.0-alpha.200210.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '$(MinimumVisualStudioVersion)' ">
